<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    tools:context=".presentation.user.SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bgHeader"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:elevation="5dp"
        android:theme="@style/ToolbarTheme" />

    <ImageView
            android:id="@+id/tvDesc"
            android:layout_width="108dp"
            android:layout_height="94dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:src="@mipmap/documentos"
            android:contentDescription="@null"
            tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:elevation="10dp"
        android:text="@string/cadastro"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        android:transitionName="tvLogin" />

    <ImageView
            android:id="@+id/circle1"
            android:layout_width="134dp"
            android:layout_height="134dp"
            android:visibility="gone"
            android:layout_below="@+id/bgHeader"
            android:layout_marginLeft="-25dp"
            android:layout_marginTop="-5dp"
            android:src="@drawable/circletransparant"
            android:contentDescription="@null"
            tools:ignore="RtlHardcoded"/>

    <ImageView
            android:id="@+id/circle3"
            android:layout_width="182dp"
            android:visibility="gone"
            android:layout_height="182dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="-80dp"
            android:layout_marginBottom="-30dp"
            android:src="@drawable/circle"
            android:contentDescription="@null"
            tools:ignore="RtlHardcoded"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bgHeader"
        android:layout_margin="10dp">

        <RelativeLayout
                android:id="@+id/rlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="ScrollViewSize">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="50dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/email"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/colorWhite"  />

                    <EditText
                            android:id="@+id/edtEmailSignup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:inputType="textEmailAddress"
                            tools:ignore="Autofill,LabelFor"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/nome"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/colorWhite"  />

                    <EditText
                            android:id="@+id/edtNameSignup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:inputType="text"
                            tools:ignore="Autofill,LabelFor"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/telefone"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/colorWhite"  />

                    <EditText
                            android:id="@+id/edtPhoneSignup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:inputType="phone"
                            tools:ignore="Autofill,LabelFor"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/senha"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/colorWhite"  />

                    <EditText
                            android:id="@+id/edtPasswordSignup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:inputType="textPassword"
                            tools:ignore="Autofill,LabelFor"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/confirmar_senha"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/colorWhite"  />

                    <EditText
                            android:id="@+id/edtConfirmPasswordSignup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:inputType="textPassword"
                            tools:ignore="Autofill,LabelFor"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cv"
                    android:layout_alignLeft="@+id/cv"
                    android:layout_alignRight="@+id/cv"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="-30dp"
                    android:layout_marginRight="35dp"
                    android:elevation="10dp"
                    tools:ignore="RtlHardcoded">

                <Button
                    android:id="@+id/btnSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_ui"
                    android:text="@string/cadastrar"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>