<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    tools:context=".presentation.user.LoginActivity"
    tools:ignore="VectorDrawableCompat">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bgHeader"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:elevation="5dp" />

    <ImageView
            android:id="@+id/tvDesc"
            android:layout_width="108dp"
            android:layout_height="94dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:src="@mipmap/documentos"
            android:contentDescription="@null"
            tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:elevation="10dp"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        android:transitionName="tvLogin" />

    <ImageView
            android:id="@+id/circle1"
            android:contentDescription="@null"
            android:layout_width="134dp"
            android:layout_height="134dp"
            android:visibility="gone"
            android:layout_below="@+id/bgHeader"
            android:layout_alignParentRight="true"
            android:layout_marginTop="-80dp"
            android:layout_marginRight="-100dp"
            android:src="@drawable/circletransparant"
            tools:ignore="RtlHardcoded"/>

    <ImageView
            android:id="@+id/circle2"
            android:contentDescription="@null"
            android:layout_width="134dp"
            android:layout_height="134dp"
            android:visibility="gone"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="-100dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/circletransparant"
            tools:ignore="RtlHardcoded"/>

    <ImageView
            android:id="@+id/circle3"
            android:contentDescription="@null"
            android:layout_width="182dp"
            android:layout_height="182dp"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="-80dp"
            android:layout_marginBottom="-30dp"
            android:src="@drawable/circle"
            tools:ignore="RtlHardcoded"/>

    <ImageView
            android:id="@+id/circle4"
            android:contentDescription="@null"
            android:layout_width="134dp"
            android:layout_height="134dp"
            android:visibility="gone"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="-50dp"
            android:layout_marginBottom="-50dp"
            android:layout_toLeftOf="@+id/circle3"
            android:src="@drawable/circletransparant"
            tools:ignore="RtlHardcoded"/>

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bgHeader">

        <RelativeLayout
                android:id="@+id/rlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="ScrollViewSize">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="50dp"
                    android:paddingTop="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/email"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/colorWhite" />

                    <EditText
                            android:id="@+id/edtemailLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:inputType="text"
                            tools:ignore="Autofill,LabelFor"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/senha"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/colorWhite" />

                    <EditText
                        android:id="@+id/edtPasswordLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:inputType="textPassword"
                        tools:ignore="Autofill,LabelFor"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cv"
                    android:layout_alignLeft="@+id/cv"
                    android:layout_alignRight="@+id/cv"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="-50dp"
                    android:layout_marginRight="35dp"
                    android:elevation="10dp"
                    tools:ignore="RtlHardcoded">

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_ui"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />
            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/cv"
                    android:layout_alignRight="@+id/cv"
                    android:layout_marginTop="-20dp"
                    android:layout_marginRight="-20dp"
                    android:elevation="10dp"
                    tools:ignore="RtlHardcoded">

                <ImageButton
                    android:id="@+id/btnRegister"
                    android:contentDescription="@null"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_ui"
                    android:src="@drawable/ic_add" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:elevation="5dp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/colorWhite"
                android:text="@string/esqueceu_senha"
                />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
